--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@xstate/react": "^0.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-robot": "^0.2.1",
+    "react-scripts": "3.4.1",
+    "robot3": "^0.2.18",
+    "xstate": "^4.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
